v.2.0.7~beta1
- strip errant linefeed from readfile on musicbrainz.nfo (where manually created)

v.2.0.6
- removed some logging causing a unicode problem
- fix for crash when no valid JSON returned from theaudiodb.com

v.2.0.5
- reverted to old logic for checking for start of new artist (more reliable)
- fix for creation of empty artist folders when using fanart.jpg option

v.2.0.4
- added option to use local fanart and folder image outside extrafanart folder
- added MusicBrainz ID extraction from theaudiodb.com information
- added ArtistSlideshow.SimilarCount and ArtistSlideshow.AlbumCount to skin properties
- fix for theaudiodb lookup when artists have ampersands in their name
- fix for artist name separation leaving extra spaces

v.2.0.3
- removed support for htbackdrops.org (API access no longer available)
- fix for crash when theaudiodb.com doesn't respond with valid JSON

v.2.0.2
- fixed crash when using fuzzy local path with non-Windows option
- updated German strings

v.2.0.1
- added option for fuzzy local path search replacing illegal path characters
- added option to search theaudiodb.com using artist name if mbid unavailable
- fixed issue when merging separate artist images with same file name
- added option to turn off featured or multi-artist image merge
- fixed crash if htbackdrops or last.fm are unresponsive

v.2.0.0
- separated code for downloads into modules to make it easier to add other services
- added preferences to allow selection of services and priority for use
- removed remote MusicBrainz lookup, MBID must now be in Kodi
- changed default to get bio from Kodi and images from htbackdrops
- rewrite of cache mechanism to reduce load on external sites
- changed cache expire range to 12 - 24 weeks (set randomly when cache is refreshed)
- updated preference strings (only French and English included, other languages
  will be added back later via Kodi Transifex project)

v.1.8.8
- updated cache logic to reduce API calls to external sites

v.1.8.7