@@ -10,9 +10,9 @@
 		<provides>executable</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<news>2.0.6
-		- fix for creation of empty artist folders
-		- fix for inconsistent logic when detecting start of new artist</news>
+		<news>2.0.7~beta1
+        - changed behavior for finding MusicBrainz ID to include Kodi, local file, theaudiodb, and lastfm
+		</news>
 		<summary lang="ar">حمل المزيد من الصور والمعلومات عن الفنان الذى يُغنِى حالياً</summary>
 		<summary lang="be">Download images and additional info of the currently playing artist</summary>
 		<summary lang="bg">Сваля изображения и допълнителна инф. за изпълнителя на текущата песен</summary>
