@@ -1,2 +1,2 @@
 #__all__ = ['local', 'fanarttv', 'kodi', 'theaudiodb', 'htbackdrops', 'lastfm']
-__all__ = ['local', 'theaudiodb', 'fanarttv', 'kodi', 'lastfm']
+__all__ = ['local', 'fanarttv', 'kodi', 'theaudiodb', 'lastfm']
