@@ -1,5 +1,7 @@
 v.2.0.7~beta1
 - strip errant linefeed from readfile on musicbrainz.nfo (where manually created)
+- added last.fm bio file as option for finding Musicbrainz ID
+- moved all Musicbrainz ID functions into plugins
 
 v.2.0.6
 - removed some logging causing a unicode problem
